--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ html {
 
 body {
   background-color: rgb(16, 53, 54);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  font-size: 2.4rem;
+  line-height: 1.5;
 }
 
 /* 🦆🦆***************************
@@ -17,22 +21,69 @@ body {
 ****************************🦆🦆 */
 
 .app-container {
-  margin: 3rem auto;
-
-  background: linear-gradient(180deg, #ffffff 0%, #f6f7fb 100%);
   width: 55rem;
+  margin: 3rem auto;
+  background: linear-gradient(180deg, #ffffff 0%, #f6f7fb 100%);
 }
 
 /* 🦆🦆***************************
-*********** HEADER **********
+*********** HEADER - NAV **********
 ****************************🦆🦆 */
 
-.header {
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 1.8rem;
+}
+
+.nav-item {
+  height: 3.4rem;
+}
+
+.logo {
+  height: 4.2rem;
+}
+
+/* 🦆🦆***************************
+*********** MAIN **********
+****************************🦆🦆 */
+
+.main-content {
+  background-image: url(images/dog-teddy.jpg);
+  background-size: cover;
+  border-radius: 15px;
+
+  min-height: 75.1rem;
+  margin: 0 0.8rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 0 0 1.6rem 1.2rem;
+}
+
+.dog-name {
+  color: #f8f8f8;
+  font-weight: 600;
+  font-size: 3.2rem;
+  line-height: 1.2;
+}
+
+.dog-message {
+  color: #b7b7b7;
+}
+
+/* 🦆🦆***************************
+*********** CTA BUTTONS **********
+****************************🦆🦆 */
+
+.CTA-btns-container {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+  gap: 2.5rem;
 
-.main-image {
-  width: 100%;
+  height: 9.19rem;
+  padding: 2.5rem 0;
 }
